fix shadow and scrollbar

--- a/styles/atom.less
+++ b/styles/atom.less
@@ -1,7 +1,6 @@
 @import "ui-variables";
 atom-workspace {
     background-color: @app-background-color;
-    border-top: 1px solid rgba(0, 0, 0, .4);
 }
 status-bar {
     background: @app-background-color;
